# rust-policy-template

./: .gitignore  Cargo.toml  Makefile  Makefile.template  README.md  artifacthub-pkg.yml  artifacthub-repo.yml  cargo-generate.toml  e2e.bats  hub.yml  metadata.yml  post-script.rhai  pre-script.rhai
.github/workflows/: cargo-generate-test.yml  release.yml  release.yml.template  test.yml
src/: lib.rs  settings.rs
test_data/: ingress_creation.json  pod_creation.json  pod_creation_invalid_name.json
